根据以上Git diff信息，可以生成以下commit message：
1. 在`Main8001.java`文件中，创建一个新的Java类`Main8001`，用于启动Spring Boot应用。
2. 在`PayController.java`文件中，修改了支付控制器的接口返回值，使用`ResultData`包装返回结果。
3. 在`PayServiceImpl.java`文件中，添加了`@Service`注解，将`PayServiceImpl`类声明为一个Spring Bean。
4. 在`pom.xml`文件中，添加了项目依赖。

因此，commit message可以是：

启动类、控制器、服务及依赖初始化。

--- a/cloud-consumer-order80/pom.xml
+++ b/cloud-consumer-order80/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.atguigu.cloud</groupId>
+        <groupId>com.atguigu.cloud</groupId>
         <artifactId>cloud2024</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -19,6 +19,11 @@
     </properties>
 
     <dependencies>
+        <!--SpringCloud consul discovery -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+        </dependency>
         <!-- 引入自己定义的api通用包 -->
         <dependency>
             <groupId>com.atguigu.cloud</groupId>
