根据以上Git diff信息，可以生成以下commit message：
1. 在`Main8001.java`文件中，创建一个新的Java类`Main8001`，用于启动Spring Boot应用。
2. 在`application.yml`文件中，配置了项目端口号8001。
3. 在`PayController.java`文件中，修改了支付控制器的接口返回值，使用`ResultData`包装返回结果。
4. 在`PayServiceImpl.java`文件中，添加了`@Service`注解，将`PayServiceImpl`类声明为一个Spring Bean。
5. 在`pom.xml`文件中，添加了项目依赖。

因此，commit message可以是：

启动类、配置文件、控制器、服务及依赖初始化。

--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
       host: localhost
       port: 8500
       discovery:
+        prefer-ip-address: true #优先使用服务ip进行注册
         service-name: ${spring.application.name}
 
 # ========================mybatis===================
