--- a/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -12,3 +12,16 @@ spring:
       discovery:
         prefer-ip-address: true #优先使用服务ip进行注册
         service-name: ${spring.application.name}
+    openfeign:
+      client:
+        config:
+          #默认配置
+          default:
+            #连接超时时间
+            connectTimeout: 3000
+            #读取超时时间
+            readTimeout: 3000
+          #指定配置 指定微服务名字
+          cloud-payment-service:
+            connectTimeout: 8000 #连接超时时间
+            readTimeout: 8000 #读取超时时间
