--- a/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -25,3 +25,6 @@ spring:
           cloud-payment-service:
             connectTimeout: 8000 #连接超时时间
             readTimeout: 8000 #读取超时时间
+      httpclient:
+        hc5:
+          enabled: true
