--- a/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -35,3 +35,12 @@ spring:
           mime-types: text/xml,application/xml,application/json #触发压缩数据类型
         response:
           enabled: true
+# feign日志以什么级别监控哪个接口
+logging:
+  level:
+    com:
+      atguigu:
+        cloud:
+          apis:
+            PayFeignApi: debug
+
